fix: remove extra padding from hamburger button

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -321,7 +321,6 @@
     button {
       display: block;
       margin-left: auto;
-      padding: 18px 20px;
 
       &:hover,
       &:focus {
